# psil-intrepreter

./: .gitignore  README.md  psil-intrepreter.cabal
src/: Eval.hs  Expression.hs  Main.hs  Parser.hs
