name: psil-intrepreter
version: 0.0.1
cabal-version: >=1.2
build-type: Simple
license: AllRightsReserved
license-file: ""
description: Intrepreter for Psil(Pronounded sil) Language.
data-dir: ""

executable psil-intrepreter
    build-depends: QuickCheck -any, 
                    base -any,
                     parsec,
                   parsec3,
                   parsec2
    main-is: Main.hs
    buildable: True
    hs-source-dirs: src
 
test-suite test-psil-intrepreter
    build-depends: QuickCheck -any, base -any
    type: exitcode-stdio-1.0
    main-is: Main.hs
    buildable: True
    cpp-options: -DMAIN_FUNCTION=testMain
    hs-source-dirs: src
 